Fix companion effects not being scrollable when overflowing (#1952)

--- a/styles/less/sheets/actors/companion/sheet.less
+++ b/styles/less/sheets/actors/companion/sheet.less
@@ -10,3 +10,16 @@
         background: url('../assets/parchments/dh-parchment-light.png');
     }
 });
+
+.application.sheet.daggerheart.actor.dh-style.companion {
+    .window-content {
+        display: flex;
+    }
+
+    .tab.active {
+        flex: 1;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+    }
+}
